@@ -1,2 +1,1 @@
-DIST sundtek-tv-amd64-20140510.tar.gz 1246063 SHA256 3fce3350a34475a532df4f4594a5b8d0ab50acb343066fdb7f322516f606ccf2 SHA512 a10efa1b5a3ae82422061975bcf3b5b4cd69e84b91af98b101d5f9d5f358c166b81579bd333b9d4bf116df659b978b0bf2f5d137d3ed237184a49ca3a0cb0439 WHIRLPOOL 8c7ead2d838b472b490349d0c7408676001b4d1128bc496ee2ddf1a7e9a7769d5dde0960db9b8e73c22b2ab9ce7363f156fdb526d98fda2d99d12dff56b037e9
-DIST sundtek-tv-x86-20140510.tar.gz 1168522 SHA256 60d637df778aacc815590a31c21baf057d3ce1019d44b8586c24e7af99b3975f SHA512 68822c065bbeac1f84b227a9484cd0d6d5819908ddbea79cdc67661e3901afcb6cb7eb9cab7ad7ea8e8c6847fdee7d59cc8dab12efecf1bd1dd0bf1fa54b9151 WHIRLPOOL 5e57facb4371ce68184b2ac8f7c7d66cd292a1f7d2b64b7fbe0c3de05d08398cb4aa802263f88a1e48d1172a54b44b22e1a4afa209abd38bd2080fe91cb4bddd
+DIST sundtek_installer_140510.143826.sh 22545046 SHA256 8bd44e9ff9e3824ba42c5e3ee58b6f5de7033ec1a51d71bdeb15dc9ef116c2b6 SHA512 43b2d5b06e38d118bd511ee07cfcbfd63abbf8509789a99e65b19a85efdce56ed7f9991744a0c377f9e625931c0c3f97b5a11f2f1f508f789cb8ad621d663afc WHIRLPOOL 5904b39e965496c465c773799c587baa0992312045e8bdd477a8f6cdf352c0e7c3e18a1818a4dbc41661972a1cb81daa6de7fef208550aa17e0ebc620004318c
